--- a/example/styles.less
+++ b/example/styles.less
@@ -106,7 +106,7 @@
     }
 
     &_input {
-      &_backgorund {
+      &_background {
         fill: transparent;
         stroke: lightslategray;
       }
