perf: 整理 测试 playground

--- a/src/playground/styles.less
+++ b/src/playground/styles.less
@@ -4,7 +4,17 @@
   user-select: none;
 }
 
-#app {
+.toolbar {
+  padding: 10px;
+
+  button {
+    padding: 5px 10px;
+    font-size: large;
+    margin-right: 5px;
+  }
+}
+
+.test {
   width: fit-content;
   margin: 50px auto;
   box-shadow: 0 0 10px #757575;
