--- a/playground/styles.less
+++ b/playground/styles.less
@@ -4,13 +4,34 @@
   user-select: none;
 }
 
+html,
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .toolbar {
   padding: 10px;
+  background: #6dcbf7;
+  box-shadow: 0 0 5px #888888;
+
+  .title {
+    color: white;
+    text-shadow: 0 0 2px #888888;
+    font-size: larger;
+  }
 
   button {
     padding: 5px 10px;
     font-size: large;
     margin-right: 5px;
+    background: white;
+    border: none;
+    border-radius: 2px;
+  }
+
+  a {
+    color: black;
+    text-decoration: none;
   }
 }
 
